Sugati/src/objects/Errata_Text__c.object
<CustomObject>
    <fields>
        <fullName>ET_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Errata Text</relationshipLabel>
        <relationshipName>Errata_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ET_Book_From__c</fullName>
        <label>Book From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ET_Book_To__c</fullName>
        <label>Book To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ET_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ET_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Errata Text</relationshipLabel>
        <relationshipName>Errata_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ET_Travel_From__c</fullName>
        <label>Travel From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ET_Travel_To__c</fullName>
        <label>Travel To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ET_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipLabel>Errata Text</relationshipLabel>
        <relationshipName>Errata_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Errata Text</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ET_Activity__c</columns>
        <columns>ET_Supplier__c</columns>
        <columns>ET_Where_to_go__c</columns>
        <columns>ET_Book_From__c</columns>
        <columns>ET_Book_To__c</columns>
        <columns>ET_Travel_From__c</columns>
        <columns>ET_Travel_To__c</columns>
        <columns>ET_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ET-{0000000000}</displayFormat>
        <label>Errata Text ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errata Text</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>